Feature ETP-198: Collector util used instead of toList()